# MERIT

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TECHNICAL_DETAILS.md  generate_visualizations.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tree.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: quickstart.py
extra/: benchmark_test.py
merit/: __init__.py  benchmark_evaluation.py  cli.py
merit/baselines/: __init__.py  bertscore.py  geval.py
merit/config/: __init__.py  configuration.py
merit/core/: __init__.py  alignment.py  base.py  consistency.py  device.py  enhanced_metrics.py  evaluation.py  factual.py  knowledge_cache.py  llm_judge.py  metrics.py  reasoning.py  utils.py  visualization.py
merit/datasets/: loaders.py
merit/evaluation/: __init__.py  annotation.py
merit/examples/: basic_example.py  dataset_evaluation.py  huggingface_example.py
merit/experiments/: __init__.py  config.py  datasets.py  robust_evaluation.py  runner.py
merit/knowledge/: __init__.py  enhanced_kb.py
merit/models/: __init__.py  base.py  device.py  huggingface.py  local_models.py  manager.py  ollama.py
merit/models/adapters/: gemini.py  huggingface.py
merit/reporting/: __init__.py  export.py  plots.py  tables.py
merit/utils/: __init__.py  stats.py
merit/validation/: __init__.py  baseline_comparison.py  human_validation.py
tests/: __init__.py  test_annotation.py  test_base.py  test_baselines.py  test_cli.py  test_config.py  test_enhanced_metrics.py  test_experiments.py  test_integration.py  test_knowledge_base.py  test_knowledge_cache.py  test_llm_judge.py  test_local_models.py  test_metrics.py  test_reporting.py  test_stats.py  test_validation.py
