[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merit"
version = "3.0.0"
description = "Multi-dimensional Evaluation of Reasoning in Transformers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Tirth Patel"}]
keywords = ["nlp", "evaluation", "reasoning", "transformers", "llm", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.19.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "spacy>=3.6.0",
    "nltk>=3.8.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "wikipedia>=1.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
judge = ["anthropic>=0.40.0"]
baselines = ["bert-score>=0.3.13"]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0",
]
all = [
    "anthropic>=0.40.0",
    "bert-score>=0.3.13",
]

[project.scripts]
merit = "merit.cli:main"

[project.urls]
Homepage = "https://github.com/tirth8205/MERIT"
Repository = "https://github.com/tirth8205/MERIT"
Issues = "https://github.com/tirth8205/MERIT/issues"

[tool.setuptools.packages.find]
include = ["merit", "merit.*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require model downloads or heavy computation",
    "gpu: marks tests that require GPU acceleration",
]
